# RAG-Thesis-Matchmaker

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  zora-build-image.yml  zora-harvest.yml
assets/: scraping_source_pages.xlsx
data/samples/: README.md  publications.jsonl  theses.jsonl
docker/zora/: Dockerfile.dockerignore
docs/: example-run.md
scripts/: zora_inspect_fields.py
src/thesis_matchmaker/: __init__.py  cli.py  config.py  llm.py
src/thesis_matchmaker/adapters/: __init__.py  mcp_server.py  service.py
src/thesis_matchmaker/contracts/: __init__.py  retrieval.py  sources.py
src/thesis_matchmaker/indexing/: __init__.py  documents.py  embedder.py  indexer.py  store.py
src/thesis_matchmaker/parsing/: __init__.py  base.py  openai_compat.py  rule_based.py
src/thesis_matchmaker/pipeline/: __init__.py  orchestrator.py
src/thesis_matchmaker/retrieval/: __init__.py  base.py  chroma.py  fake.py
src/thesis_matchmaker/synthesis/: __init__.py  base.py  llm.py  template.py
src/thesis_matchmaker/zora/: __init__.py  config.py  harvest.py  normalize.py  output_schema.py  scheduler.py  state.py  zora_client.py
tests/: test_chroma_retriever.py  test_cli.py  test_contracts.py  test_documents.py  test_embedder.py  test_factories.py  test_indexer.py  test_mcp_service.py  test_parsing.py  test_pipeline.py  test_smoke.py  test_store.py  test_synthesis.py
tests/zora/: test_normalize.py  test_output_schema.py  test_scheduler.py
