[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-matchmaker"
version = "0.0.1"
description = "Thesis matchmaking assistant for UZH: recommends supervisors and open thesis positions from a student's research interests."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Shayan Sooratgar" },
    { name = "Nicolas Peyer" },
    { name = "Gregory Frommelt" },
    { name = "Ilya Kruchenetskiy" },
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# Local embedding model (BGE-M3). Kept out of the default install because it
# pulls in torch; CI and the fake embedder do not need it.
embeddings = [
    "sentence-transformers>=3.0",
]

[project.scripts]
thesis-matchmaker = "thesis_matchmaker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
